src/objects/jj_rb_Master_Data_Request__c.object
<CustomObject>
    <description>This object stores all the customer, product creation requests.</description>
    <fields>
        <fullName>jj_rb_Business_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Credit_check_Validity_End__c</fullName>
        <label>Credit check Validity End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Credit_check_Validity_From__c</fullName>
        <label>Credit check Validity From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer record that will be created after approval of the customer master data request.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master Data Requests</relationshipLabel>
        <relationshipName>Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>IMS Customer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>IMS Product ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_National_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Master_Data_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rebate product that will be created from this master data request.</description>
        <label>Rebate Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipLabel>Master Data Request</relationshipLabel>
        <relationshipName>Master_Data_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Request_Change_For_ID__c</fullName>
        <label>Rebate_Request_Change_For_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Region associated with the NHS Trust</description>
        <label>Region</label>
        <referenceTo>jj_rb_Region__c</referenceTo>
        <relationshipLabel>Master Data Requests</relationshipLabel>
        <relationshipName>Master_Data_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Customer_Number__c</fullName>
        <description>Customer identifier from SAP</description>
        <externalId>true</externalId>
        <label>SAP Customer No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Description__c</fullName>
        <label>SAP Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_EAN_Code__c</fullName>
        <label>SAP EAN Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Material_Code__c</fullName>
        <label>SAP Material Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Vendor_Number__c</fullName>
        <label>SAP Vendor Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_Total_Estimat_Rebate_Accrual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Estimated Rebate Accrual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Piece</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_VAT_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT Code</label>
        <referenceTo>jj_rb_VAT_Code__c</referenceTo>
        <relationshipLabel>Master Data Requests</relationshipLabel>
        <relationshipName>Master_Data_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Master Data Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>jj_rb_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Customer_Master_Data_Request</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_SAP_Customer_Number__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Master_Data_Request__c.jj_rb_MDR_Retailer_Customer_Master_Data_Request</value>
        </filters>
        <label>Retailer Customer Master Data Request</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hom_Care_Provider_Master_Data_Request</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Business_Name__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Master_Data_Request__c.jj_rb_Home_Care_Provider_Data_Request</value>
        </filters>
        <label>Homecare Provider Master Data Request</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hospital_Master_Data_Request</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Business_Name__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Master_Data_Request__c.jj_rb_Hospital_Data_Request</value>
        </filters>
        <label>Hospital Master Data Request</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Product_Master_Data_Requests</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Product_Name__c</columns>
        <columns>jj_rb_SAP_Material_Code__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>jj_rb_Product_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Product Master Data Requests</label>
    </listViews>
    <nameField>
        <displayFormat>MDR-{0}</displayFormat>
        <label>Master Data Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Data Requests</pluralLabel>
    <recordTypes>
        <fullName>jj_rb_Home_Care_Provider_Data_Request</fullName>
        <active>true</active>
        <description>Use this to create a new Home care provider request</description>
        <label>Homecare Customer Data Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Hospital_Data_Request</fullName>
        <active>true</active>
        <description>Use this to create Hospital data request</description>
        <label>Hospital Data Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_MDR_Retailer_Customer_Master_Data_Request</fullName>
        <active>true</active>
        <description>Use this to create a retailer customer request.</description>
        <label>Retailer Customer Data Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_MDR_Retailer_Product_Master_Data_Request</fullName>
        <active>true</active>
        <description>Use this to create a new product request.</description>
        <label>Product Data Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Trust_Data_Request</fullName>
        <active>true</active>
        <description>Use this to create a new Trust data request.</description>
        <label>Trust Data Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>jj_rb_Credit_dates_validation</fullName>
        <active>true</active>
        <description>Credit check Validity End should be greater than Credit check Validity From</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;Homecare Customer Data Request&apos; ,jj_rb_Credit_check_Validity_End__c &lt;  jj_rb_Credit_check_Validity_From__c)</errorConditionFormula>
        <errorDisplayField>jj_rb_Credit_check_Validity_From__c</errorDisplayField>
        <errorMessage>Credit check Validity End should be greater than Credit check Validity From</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_IMS_cust_ID_is_number</fullName>
        <active>true</active>
        <description>IMS customer number should be a number</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;Retailer Customer Data Request&apos;, NOT( ISNUMBER( jj_rb_IMS_Customer_Id__c )))</errorConditionFormula>
        <errorDisplayField>jj_rb_IMS_Customer_Id__c</errorDisplayField>
        <errorMessage>IMS customer number should be a number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_IMS_prod_ID_is_number</fullName>
        <active>true</active>
        <description>IMS product number should be a number.</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;Product Data Request&apos;, NOT( ISNUMBER( jj_rb_IMS_Product_ID__c ) ) )</errorConditionFormula>
        <errorDisplayField>jj_rb_IMS_Product_ID__c</errorDisplayField>
        <errorMessage>IMS product number should be a number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_Product_EAN_code_Duplicate_chk</fullName>
        <active>false</active>
        <description>Rebate product already present with specified SAP EAN code.</description>
        <errorConditionFormula>NOT(ISNULL(VLOOKUP($ObjectType.jj_rb_Rebate_Product__c.Fields.jj_rb_SAP_EAN_Code__c, $ObjectType.jj_rb_Rebate_Product__c.Fields.Name, jj_rb_SAP_EAN_Code__c)))</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_EAN_Code__c</errorDisplayField>
        <errorMessage>Rebate product already present with specified SAP EAN code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_Product_Materia_code_Duplicate_chk</fullName>
        <active>false</active>
        <description>Rebate product already present with specified SAP Material code</description>
        <errorConditionFormula>NOT(ISNULL(VLOOKUP($ObjectType.jj_rb_Rebate_Product__c.Fields.jj_rb_SAP_Material_Number__c, $ObjectType.jj_rb_Rebate_Product__c.Fields.Name,  jj_rb_SAP_Material_Code__c )))</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_Material_Code__c</errorDisplayField>
        <errorMessage>Rebate product already present with specified SAP Material code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_SAP_CustomerNo_is_numeric</fullName>
        <active>true</active>
        <description>SAP Customer no should be a number.</description>
        <errorConditionFormula>AND(  OR(RecordType.Name  = &apos;Retailer Customer Data Request&apos;,RecordType.Name  = &apos;Homecare Customer Data Request&apos;)  ,NOT(isnumber(jj_rb_SAP_Customer_Number__c) ))</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_Customer_Number__c</errorDisplayField>
        <errorMessage>SAP Customer No. should be a number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_SAP_EanCode_is_numeric</fullName>
        <active>true</active>
        <description>SAP EAN Code should be a number.</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;Product Data Request&apos;,NOT(isnumber(jj_rb_SAP_EAN_Code__c) ))</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_EAN_Code__c</errorDisplayField>
        <errorMessage>SAP EAN Code should be a number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_SAP_MaterialNo_is_numeric</fullName>
        <active>true</active>
        <description>SAP Material No. should be a number.</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;Product Data Request&apos;,NOT(isnumber(jj_rb_SAP_Material_Code__c ) ))</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_Material_Code__c</errorDisplayField>
        <errorMessage>SAP Material No. should be a number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_SAP_VendorNo_is_numeric</fullName>
        <active>true</active>
        <description>SAP Vendor No. should be a number.</description>
        <errorConditionFormula>AND(RecordType.Name  = &apos;Retailer Customer Data Request&apos; ,NOT(isnumber(jj_rb_SAP_Vendor_Number__c) ))</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_Vendor_Number__c</errorDisplayField>
        <errorMessage>SAP Vendor No. should be a number.</errorMessage>
    </validationRules>
</CustomObject>